# dl-driver

./: .gitignore  Cargo.toml  README.md  TEST_RESULTS.md  s3dlio_health_check.py  s3dlio_validation_simple.py  set_azure.sh  test_coordination.sh  test_data_generation_config.yaml  test_multi_rank_shared_memory.sh
.github/: copilot-instructions.md  license-policy.yml
.github/workflows/: license-compliance.yml
.reuse/: dep5
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: advanced_s3dlio_tests.rs  all_backends_comprehensive_tests.rs  backend_integration.rs  comprehensive_s3dlio_tests.rs  config_tests.rs  dlio_mlperf_compatibility_tests.rs  error_handling_test.py  large_scale_s3dlio_tests.rs  mlcommons_dlio_validation.rs  performance_benchmark_test.py  pytorch_integration_test.py  s3dlio_integration_test.rs  simple_performance_benchmark.py  tensorflow_integration_test.py
crates/cli/tests/configs/: test_azure_config.yaml  test_config.yaml  test_directio_config.yaml  test_file_config.yaml  test_s3_config.yaml  test_s3_large_config.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  config_test.rs  coordination.rs  dataset.rs  dlio_compat.rs  generation.rs  lib.rs  metrics.rs  metrics_old.rs  runner.rs  workload.rs  workload_old.rs
crates/core/src/config/: dlio_config.rs  mod.rs
crates/core/src/mlperf/: mod.rs
crates/core/src/plan/: mod.rs
crates/core/src/plugins/: checkpoint.rs  mod.rs
crates/core/tests/: config_tests.rs
crates/core/tests/fixtures/: test_workload1.yaml
crates/formats/: Cargo.toml
crates/formats/src/: formats_integration.rs  hdf5.rs  lib.rs  npz.rs  tfrecord.rs
crates/frameworks/: Cargo.toml
crates/frameworks/src/: framework_config.rs  lib.rs  pytorch_adapter.bak  pytorch_adapter.rs  tests.old  tests.rs
crates/py_api/: Cargo.toml
crates/py_api/src/: lib.rs
crates/py_api/src/frameworks/: __init__.py  mod.rs  pytorch.py  tensorflow.py
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  posix.rs
docs/: Changelog.md  LICENSE-COMPLIANCE.md  M4_FRAMEWORK_PROFILES_PLAN.md  M5_M6_IMPLEMENTATION_PLAN.md  M5_M6_IMPLEMENTATION_ROADMAP.md  PROJECT_ORGANIZATION_SUMMARY.md  S3DLIO_BUG_REPORT.md  UNIFIED_DLIO_ENGINE_SUCCESS_REPORT.md  v0.4.0-release-notes.md
docs/goldens/: README.md  tolerance.json
docs/goldens/test_configs/: minimal_config.yaml  resnet_config.yaml  unet3d_config.yaml
docs/releases/: PULL_REQUEST_SUMMARY.md  PULL_REQUEST_v0.4.0.md  v0.6.0-unified-architecture.md
docs/testing/: ALL_BACKENDS_TEST_RESULTS.md  M4_COMPLETE_VALIDATION_RESULTS.md  M4_INTEGRATION_TEST_RESULTS.md
python/tests/: README.md  test_final_verification.py  test_multi_backend_frameworks.py  test_real_io_operations.py
scripts/: check-license-compliance.sh  generate_golden_references.sh  launch_8_ranks.sh  plan_a1_launcher.sh  test_2_ranks.sh  validate_golden.sh
test_matrix/: azure_backend_config.yaml  comprehensive_test_matrix.sh  directio_backend_config.yaml  file_backend_config.yaml  s3_backend_config.yaml
tests/: dlio_config_comprehensive.rs  framework_integration_tests.py  framework_integration_validator.py  pytorch_integration_test.py  test_config_parsing.rs  test_npy.rs  test_s3dlio_functions.rs
tests/configs/: framework_test_hdf5_config.yaml  framework_test_npz_config.yaml
tests/dlio_configs/: bert_config.yaml  cosmoflow_config.yaml  large_scale_threading_test.yaml  multi_rank_test.yaml  resnet50_h100.yaml  resnet50_s3.yaml  resnet_s3-h100.yaml  test_checkpoint_config.yaml  test_train_metric_config.yaml  threading_test.yaml  throughput_validation_test.yaml
tests/framework_configs/: jax_resnet.yaml  multi_framework_cosmoflow.yaml  pytorch_unet3d.yaml  tensorflow_bert.yaml
tests/test_configs/: hdf5_test_config.yaml  test_hdf5_dlio_config.yaml  test_npz_dlio_config.yaml  test_tfrecord_dlio_config.yaml  tfrecord_test_config.yaml
tools/validation/: README.md  create_reference_tfrecord.py  debug_crc.py  validate_formats.py
tools/validation/test_configs/: hdf5_validation_config.yaml  npz_validation_config.yaml  tfrecord_validation_config.yaml
