[package]
name    = "real_dlio"          # ← the binary you will run
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow      = "1.0"
clap        = { version = "4.5", features = ["derive"] }
serde_yaml  = "0.9"
tokio       = { version = "1.0", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
real_dlio_core = { path = "../core" }   # ← library dependency

