[package]
name    = "real_dlio"          # ← the binary you will run
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow      = "1.0"
clap        = { version = "4.5", features = ["derive"] }
serde_yaml  = "0.9"
tokio       = { version = "1.0", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
real_dlio_core = { path = "../core" }   # ← library dependency
s3dlio = { path = "../../../s3dlio" }   # ← for testing s3dlio integration

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
futures = "0.3"
rand = { version = "0.9", features = ["std", "alloc"] }
futures-util = "0.3"
async-trait = "0.1"
tracing-test = "0.2"

