[package]
name    = "real_dlio_core"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_yaml  = "0.9"
tokio       = { version = "1.0", features = ["full"] }
uuid        = { version = "1.0", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
dotenvy     = "0.15"
bytes       = "1.0"
object_store = "0.10"

# s3dlio integration with updated Rust
s3dlio = { path = "../../../s3dlio" }

