[package]
name = "dl_driver_core"
version = "0.6.2"
edition = "2021"

[dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
tokio       = { version = "1.0", features = ["full"] }
uuid        = { version = "1.0", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
dotenvy     = "0.15"
bytes       = "1.0"
object_store = "0.10"
async-trait = "0.1"
futures-util = "0.3"

# Additional dependencies from s3dlio for advanced features
futures = "0.3"
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
rand = { version = "0.9", features = ["std", "alloc"] }
rand_chacha = "0.3"
rayon = "1.10"
num_cpus = "1.16"
ndarray = "0.15"
ndarray-npy = "0.8"
tempfile = "3.0"

# s3dlio integration with updated Rust
s3dlio = { path = "../../../s3dlio" }

# Local formats crate
real_dlio_formats = { path = "../formats" }

# Optional compression support for checkpoints
zstd = "0.13"

[dev-dependencies]
tempfile = "3.0"

