[package]
name = "dl_driver_frameworks"
version = "0.5.3"
edition = "2021"
description = "Framework integrations for dl-driver (PyTorch, TensorFlow)"
license = "MIT"

[dependencies]
dl_driver_core = { path = "../core" }
real_dlio_formats = { path = "../formats" }
s3dlio = { path = "../../../s3dlio" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
numpy = "0.25"
pyo3 = { version = "0.25", features = ["extension-module"] }

# Framework-specific dependencies (feature-gated)
# Note: Using tch (libtorch bindings) instead of torch for PyTorch integration
[dependencies.tch]
version = "0.13"
optional = true

[features]
default = []
pytorch = ["tch"]
tensorflow = []